--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link
       rel="icon"
       type="image/svg+xml"
-      href="https://ik.imagekit.io/amazonzlone15/amazon-image/amazon-logo.jpg?updatedAt=1689924845593"
+      href="https://ik.imagekit.io/amazonzlone15/amazon-image/logo22.png?updatedAt=1690812443240"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Amazon.in</title>
